--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="toast-root"></div>
+    <div id="backdrop-root"></div>
+    <div id="overlay-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
